testsuite/tests/semantic_errors/invalid_argument/test.out
Analyzing test.adb
##################

Resolving xrefs for node <CallStmt test.adb:4:4-4:15>
*****************************************************

Name resolution failed as expected with:

test.adb:4:9: error: expected Integer, got Boolean
4 |    Foo (True);
  |         ^^^^



Done.
